kubernetes/llm/components/litellm-gateway/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
  namespace: llm
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    externaldns.k8s.io: unifi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-gateway
      namespace: openshift-ingress

    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listeners
      namespace: openshift-ingress
  hostnames: ["litellm.arthurvardevanyan.com"]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: litellm-svc
          namespace: llm
          port: 4000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
